# strands_studio_ui

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEVELOPMENT.md  Dockerfile.frontend  README.md  docker-compose.yml  index.html  package-lock.json  package.json  project.md  start_all.sh  stop_all.sh  tailwind.config.js  test_request.json  vite.config.ts
backend/: .env.example  .gitignore  Dockerfile  HOWTO_SETUP_AGENTCORE_ROLE.md  STORAGE_IMPLEMENTATION.md  app_main.py  create_agentcore_role.sh  main.py  pyproject.toml  quick_test.py  requirements.txt  test_api.py  test_components.py  test_custom_tool.py  test_input_data.py  test_mcp_integration.py  test_mcp_simple.py  test_storage_system.py  test_streaming.py
backend/app/: __init__.py
backend/app/api/: components.py  health.py  routes.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  middleware.py
backend/app/models/: __init__.py  api.py  components.py  conversation.py  deployment.py  storage.py
backend/app/routers/: codegen.py  deployment.py  skills.py
backend/app/services/: __init__.py  agentcore_invoke_service.py  component_registry.py  conversation_service.py  deployment_service.py  ecs_invoke_service.py  lambda_invoke_service.py  skill_service.py  storage_service.py
backend/app/utils/: __init__.py  exceptions.py  path_utils.py  sse_formatter.py
backend/codegen/: __init__.py  cache.py  config.py  service.py  validators.py  workspace_builder.py
backend/codegen/backends/: __init__.py  base.py  claude_sdk.py  registry.py
backend/codegen/guidance/: CLAUDE.md  FIX_CLAUDE.md  contract_spec.md  flow_semantics.md
backend/deployment/: README.md
backend/deployment/agentcore/: README.md  agent_runtime_template.py  agentcore_config.py  agentcore_deployment_service.py  code_adapter.py  debug_streaming.py  dockerfile_template  package_builder.py  requirements.txt
backend/deployment/ecs-fargate/: Dockerfile  README.md  __init__.py  agent_server.py  cloudformation-template.yaml  container_build_service.py  ecs_deployment_service.py  requirements.txt
backend/tests/: generated.py
(+112 files in other folders)
